приложение готово, но без тестов
