# api/v1/openapi.yml
@@ -15,12 +15,12 @@ tags:
 paths:
 
   # путь для создания кошелька
-  /api/v1/wallets/create:
+  /api/v1/wallet/create:
     post:
       tags:
         - wallet
       summary: create wallet
-      operationId: create
+      operationId: CreateWallet
 
       responses:
         '201':
@@ -38,6 +38,10 @@ paths:
               schema:
                 # общий тип для ошибок
                 $ref: "#/components/schemas/Error"
+                example:
+                  status: 500
+                  title: Internal Server Error
+                  detail: "Could not create wallet due to internal error."
 
   # внесение и снятие средств
   /api/v1/wallet:
@@ -130,7 +134,7 @@ components:
           enum: ["deposit", "withdraw"]
         amount:
           type: integer
-          format: int32
+          #format: int32
       required:
         - wallet_id
         - operation
@@ -144,7 +148,7 @@ components:
           #format: uuid
         balance:
           type: integer
-          format: int32
+          #format: int32
       required:
         - wallet_id
         - balance
@@ -154,7 +158,7 @@ components:
       properties:
         status:
           type: integer
-          format: int32
+          #format: int32
           description: The HTTP status code generated by the origin server for this occurrence of the problem.
         title:
           type: string
